--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@expo/webpack-config": "^18.0.1",
+    "@hookform/resolvers": "^3.1.0",
+    "@mui/material": "^5.13.4",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -21,12 +25,15 @@
     "expo-web-browser": "~12.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-user-avatar": "^1.0.8",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "react-native-vector-icons": "^9.2.0"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
