--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
     "expo-web-browser": "~12.1.1",
     "firebase": "^9.21.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-art": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-paper": "^5.8.0",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10",
+    "react-native-web": "^0.18.12",
     "yup": "^1.2.0"
   },
   "devDependencies": {
