--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "dayjs": "^1.11.8",
     "expo": "~48.0.18",
     "expo-auth-session": "~4.0.3",
     "expo-crypto": "~12.2.1",
+    "expo-localization": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
     "firebase": "^9.21.0",
+    "formik": "^2.4.1",
     "react": "18.2.0",
     "react-art": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +35,7 @@
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
+    "react-native-paper-dates": "^0.18.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-user-avatar": "^1.0.8",
