--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dayjs": "^1.11.8",
     "expo": "~48.0.18",
     "expo-auth-session": "~4.0.3",
+    "expo-constants": "~14.2.1",
     "expo-crypto": "~12.2.1",
+    "expo-device": "^5.6.0",
     "expo-localization": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -33,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-paper-dates": "^0.18.1",
@@ -41,8 +44,7 @@
     "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12",
-    "yup": "^1.2.0",
-    "expo-constants": "~14.2.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
