--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-user-avatar": "^1.0.8",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12",
     "yup": "^1.2.0"
